add responsiveness and effects

--- a/final_code/index.html
+++ b/final_code/index.html
@@ -117,46 +117,58 @@
           </div>
           <div class="projects__content">
             <div class="projects__project">
-              <img
-                src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-                alt="project 1"
-              />
-              <h3>Project 1</h3>
+              <a href="https://github.com" target="_blank" rel="noreferrer">
+                <img
+                  src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
+                  alt="project 1"
+                />
+                <h3>Project 1</h3>
+              </a>
             </div>
             <div class="projects__project">
-              <img
-                src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-                alt="project 2"
-              />
-              <h3>Project 2</h3>
+              <a href="https://github.com" target="_blank" rel="noreferrer">
+                <img
+                  src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
+                  alt="project 2"
+                />
+                <h3>Project 2</h3>
+              </a>
             </div>
             <div class="projects__project">
-              <img
-                src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-                alt="project 3"
-              />
-              <h3>Project 3</h3>
+              <a href="https://github.com" target="_blank" rel="noreferrer">
+                <img
+                  src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
+                  alt="project 3"
+                />
+                <h3>Project 3</h3>
+              </a>
             </div>
             <div class="projects__project">
-              <img
-                src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-                alt="project 4"
-              />
-              <h3>Project 1</h3>
+              <a href="https://github.com" target="_blank" rel="noreferrer">
+                <img
+                  src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
+                  alt="project 4"
+                />
+                <h3>Project 4</h3>
+              </a>
             </div>
             <div class="projects__project">
-              <img
-                src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-                alt="project 5"
-              />
-              <h3>Project 2</h3>
+              <a href="https://github.com" target="_blank" rel="noreferrer">
+                <img
+                  src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
+                  alt="project 5"
+                />
+                <h3>Project 5</h3>
+              </a>
             </div>
             <div class="projects__project">
-              <img
-                src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-                alt="project 6"
-              />
-              <h3>Project 3</h3>
+              <a href="https://github.com" target="_blank" rel="noreferrer">
+                <img
+                  src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
+                  alt="project 6"
+                />
+                <h3>Project 6</h3>
+              </a>
             </div>
           </div>
         </div>
@@ -199,13 +211,21 @@
               method="POST"
               class="contact__form"
             >
-              <input type="text" name="name" placeholder="Name" required />
-              <input type="email" name="email" placeholder="Email" required />
+              <label for="name">Name</label>
+              <input type="text" name="name" placeholder="Your name" required />
+              <label for="email">Email</label>
+              <input
+                type="email"
+                name="email"
+                placeholder="Your Email"
+                required
+              />
+              <label for="message">Message</label>
               <textarea
                 id="message"
                 cols="30"
                 rows="10"
-                placeholder="Message"
+                placeholder="Your Message"
                 required
               ></textarea>
               <button class="button" type="submit">Submit</button>
