change project image size

--- a/final_code/index.html
+++ b/final_code/index.html
@@ -118,55 +118,37 @@
           <div class="projects__content">
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
-                <img
-                  src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-                  alt="project 1"
-                />
+                <img src="images/project_cover.jpg" alt="project 1" />
                 <h3>Project 1</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
-                <img
-                  src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-                  alt="project 2"
-                />
+                <img src="images/project_cover.jpg" alt="project 2" />
                 <h3>Project 2</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
-                <img
-                  src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-                  alt="project 3"
-                />
+                <img src="images/project_cover.jpg" alt="project 3" />
                 <h3>Project 3</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
-                <img
-                  src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-                  alt="project 4"
-                />
+                <img src="images/project_cover.jpg" alt="project 4" />
                 <h3>Project 4</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
-                <img
-                  src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-                  alt="project 5"
-                />
+                <img src="images/project_cover.jpg" alt="project 5" />
                 <h3>Project 5</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
-                <img
-                  src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-                  alt="project 6"
-                />
+                <img src="images/project_cover.jpg" alt="project 6" />
                 <h3>Project 6</h3>
               </a>
             </div>
