--- a/final_code/index.html
+++ b/final_code/index.html
@@ -303,7 +303,10 @@
         </div>
         <p>
           &copy; <span class="year"></span> - Made with ❤️ by
-          <a href="https://www.github.com/agakadela" target="_blank"
+          <a
+            href="https://www.github.com/agakadela"
+            target="_blank"
+            class="footer__link"
             >Jane Doe</a
           >
         </p>
