--- a/final_code/index.html
+++ b/final_code/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jane Doe - Full Stack Developer</title>
+    <meta
+      name="description"
+      content="Jane Doe - an experienced Web Developer"
+    />
+
+    <title>Jane Doe - Web Developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
