--- a/final_code/index.html
+++ b/final_code/index.html
@@ -198,23 +198,34 @@
               method="POST"
               class="contact__form"
             >
-              <label for="name">Name</label>
-              <input type="text" name="name" placeholder="Your name" required />
-              <label for="email">Email</label>
-              <input
-                type="email"
-                name="email"
-                placeholder="Your Email"
-                required
-              />
-              <label for="message">Message</label>
-              <textarea
-                id="message"
-                cols="30"
-                rows="10"
-                placeholder="Your Message"
-                required
-              ></textarea>
+              <label for="name"
+                >Name
+                <input
+                  type="text"
+                  name="name"
+                  placeholder="Your name"
+                  required
+                />
+              </label>
+              <label for="email"
+                >Email
+                <input
+                  type="email"
+                  name="email"
+                  placeholder="Your Email"
+                  required
+                />
+              </label>
+              <label for="message"
+                >Message
+                <textarea
+                  id="message"
+                  cols="30"
+                  rows="10"
+                  placeholder="Your Message"
+                  required
+                ></textarea>
+              </label>
               <button class="button" type="submit">Submit</button>
             </form>
           </div>
