--- a/final_code/index.html
+++ b/final_code/index.html
@@ -198,7 +198,7 @@
               method="POST"
               class="contact__form"
             >
-              <label for="name"
+              <label
                 >Name
                 <input
                   type="text"
@@ -207,7 +207,7 @@
                   required
                 />
               </label>
-              <label for="email"
+              <label
                 >Email
                 <input
                   type="email"
@@ -216,7 +216,7 @@
                   required
                 />
               </label>
-              <label for="message"
+              <label
                 >Message
                 <textarea
                   id="message"
