--- a/final_code/index.html
+++ b/final_code/index.html
@@ -15,6 +15,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500;700&display=swap"
       rel="stylesheet"
+      rel="preload"
     />
     <link href="https://css.gg/css" rel="stylesheet" />
 
