--- a/final_code/index.html
+++ b/final_code/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500;700&display=swap"
       rel="stylesheet"
       rel="preload"
+      as="style"
     />
 
     <link rel="stylesheet" href="css/style.css" />
