finally fix images dimension

--- a/final_code/index.html
+++ b/final_code/index.html
@@ -55,32 +55,22 @@
             <a class="button" href="#download">Contact me</a>
           </div>
           <div class="hero__image">
-            <picture>
-              <source srcset="images/hero-photo.webp" type="image/webp" />
-              <source srcset="images/hero-photo.png" type="image/png" />
-
-              <img
-                src="images/hero-photo.png"
-                class="hero-img"
-                alt="Woman smiling"
-              />
-            </picture>
+            <img
+              src="images/hero-photo.jpg"
+              alt="Woman smiling"
+              width="500"
+              height="333"
+            />
           </div>
         </div>
       </section>
       <section class="about" id="about">
         <div class="about__container">
           <div class="about__image">
-            <picture>
-              <source srcset="images/it-girl.webp" type="image/webp" />
-              <source srcset="images/it-girl.png" type="image/png" />
-
-              <img
-                src="images/it-girl.png"
-                class="hero-img"
-                alt="Woman smiling and sitting on a chair with a laptop"
-              />
-            </picture>
+            <img
+              src="images/it-girl.png"
+              alt="Woman smiling and sitting on a chair with a laptop"
+            />
           </div>
           <div class="about__content">
             <div class="about__content-heading">
@@ -145,109 +135,67 @@
           <div class="projects__content">
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
-                <picture>
-                  <source
-                    srcset="images/project_cover.webp"
-                    type="image/webp"
-                  />
-                  <source srcset="images/project_cover.png" type="image/png" />
-
-                  <img
-                    src="images/project_cover.png"
-                    class="hero-img"
-                    alt="Laptop with a website"
-                  />
-                </picture>
+                <img
+                  src="images/project_cover.jpg"
+                  alt="Laptop with a website"
+                  width="400"
+                  height="285"
+                />
                 <h3>Project 1</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
-                <picture>
-                  <source
-                    srcset="images/project_cover.webp"
-                    type="image/webp"
-                  />
-                  <source srcset="images/project_cover.png" type="image/png" />
-
-                  <img
-                    src="images/project_cover.png"
-                    class="hero-img"
-                    alt="Laptop with a website"
-                  />
-                </picture>
+                <img
+                  src="images/project_cover.jpg"
+                  alt="Laptop with a website"
+                  width="400"
+                  height="285"
+                />
                 <h3>Project 2</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
-                <picture>
-                  <source
-                    srcset="images/project_cover.webp"
-                    type="image/webp"
-                  />
-                  <source srcset="images/project_cover.png" type="image/png" />
-
-                  <img
-                    src="images/project_cover.png"
-                    class="hero-img"
-                    alt="Laptop with a website"
-                  />
-                </picture>
+                <img
+                  src="images/project_cover.jpg"
+                  alt="Laptop with a website"
+                  width="400"
+                  height="285"
+                />
                 <h3>Project 3</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
-                <picture>
-                  <source
-                    srcset="images/project_cover.webp"
-                    type="image/webp"
-                  />
-                  <source srcset="images/project_cover.png" type="image/png" />
-
-                  <img
-                    src="images/project_cover.png"
-                    class="hero-img"
-                    alt="Laptop with a website"
-                  />
-                </picture>
+                <img
+                  src="images/project_cover.jpg"
+                  alt="Laptop with a website"
+                  width="400"
+                  height="285"
+                />
                 <h3>Project 4</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
-                <picture>
-                  <source
-                    srcset="images/project_cover.webp"
-                    type="image/webp"
-                  />
-                  <source srcset="images/project_cover.png" type="image/png" />
-
-                  <img
-                    src="images/project_cover.png"
-                    class="hero-img"
-                    alt="Laptop with a website"
-                  />
-                </picture>
+                <img
+                  src="images/project_cover.jpg"
+                  alt="Laptop with a website"
+                  width="400"
+                  height="285"
+                />
                 <h3>Project 5</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
-                <picture>
-                  <source
-                    srcset="images/project_cover.webp"
-                    type="image/webp"
-                  />
-                  <source srcset="images/project_cover.png" type="image/png" />
-
-                  <img
-                    src="images/project_cover.png"
-                    class="hero-img"
-                    alt="Laptop with a website"
-                  />
-                </picture>
+                <img
+                  src="images/project_cover.jpg"
+                  alt="Laptop with a website"
+                  width="400"
+                  height="285"
+                />
                 <h3>Project 6</h3>
               </a>
             </div>
