write more meta desc

--- a/final_code/index.html
+++ b/final_code/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Jane Doe - an experienced Web Developer"
+      content="Jane Doe - an experienced Web Developer. Check out my portfolio and get in touch!"
     />
 
     <title>Jane Doe - Web Developer</title>
