--- a/final_code/index.html
+++ b/final_code/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="#" class="header__logo">
+      <a href="#hero" class="header__logo">
         <img src="images/jane_doe_logo.svg" alt="logo" />
       </a>
       <nav class="header__nav">
