--- a/final_code/index.html
+++ b/final_code/index.html
@@ -77,11 +77,12 @@
               <h2 class="heading">About Me</h2>
             </div>
             <p class="about__content-p">
-              I'm a paragraph. Click here to add your own text and edit me. It's
-              easy. Just click “Edit Text” or double click me to add your own
-              content and make changes to the font. Feel free to drag and drop
-              me anywhere you like on your page. I'm a great place for you to
-              tell a story and let your users know a little more about you.
+              I'm currently working as a web developer. I have developed a good
+              understanding of HTML, CSS, and JavaScript to make websites more
+              user-friendly and engaging. With a passion for development, I
+              always stay updated with the latest technologies and ensure I can
+              provide the best for my clients. When I'm not working, you'll find
+              me at the gym to make sure I keep fit and healthy.
             </p>
             <div class="about__content-info">
               <a class="button" href="#download">Download CV</a>
