improve projects and readme

--- a/code_for_course/final_code/index.html
+++ b/code_for_course/final_code/index.html
@@ -137,67 +137,67 @@
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
                 <img
-                  src="images/project_cover.jpg"
+                  src="images/to-do-app.png"
                   alt="Laptop with a website"
                   width="400"
                   height="285"
                 />
-                <h3>Project 1</h3>
+                <h3>To do app</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
                 <img
-                  src="images/project_cover.jpg"
+                  src="images/finance-analytics-app.jpg"
                   alt="Laptop with a website"
                   width="400"
                   height="285"
                 />
-                <h3>Project 2</h3>
+                <h3>Finance analytics app</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
                 <img
-                  src="images/project_cover.jpg"
+                  src="images/facebook-clone.jpg"
                   alt="Laptop with a website"
                   width="400"
                   height="285"
                 />
-                <h3>Project 3</h3>
+                <h3>Facebook clone</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
                 <img
-                  src="images/project_cover.jpg"
+                  src="images/weather-app.jpg"
                   alt="Laptop with a website"
                   width="400"
                   height="285"
                 />
-                <h3>Project 4</h3>
+                <h3>Weather app</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
                 <img
-                  src="images/project_cover.jpg"
+                  src="images/netflix-clone.jpg"
                   alt="Laptop with a website"
                   width="400"
                   height="285"
                 />
-                <h3>Project 5</h3>
+                <h3>Netflix clone</h3>
               </a>
             </div>
             <div class="projects__project">
               <a href="https://github.com" target="_blank" rel="noreferrer">
                 <img
-                  src="images/project_cover.jpg"
+                  src="images/tetris-game.jpg"
                   alt="Laptop with a website"
                   width="400"
                   height="285"
                 />
-                <h3>Project 6</h3>
+                <h3>Tetris game</h3>
               </a>
             </div>
           </div>
