--- a/code_for_course/final_code/index.html
+++ b/code_for_course/final_code/index.html
@@ -18,7 +18,7 @@
       rel="preload"
       as="style"
     />
-
+    <link rel="icon" href="images/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
     <script defer src="js/scripts.js"></script>
@@ -34,7 +34,11 @@
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a class="button" href="#">Download CV</a></li>
+          <li>
+            <a class="button" href="./downloads/resume.pdf" target="_blank"
+              >Download CV</a
+            >
+          </li>
         </ul>
       </nav>
       <div class="hamburger">
@@ -52,7 +56,7 @@
             <p class="hero__content-p">
               with 5 years of experience in web development.
             </p>
-            <a class="button" href="#download">Contact me</a>
+            <a class="button" href="#contact">Contact me</a>
           </div>
           <div class="hero__image">
             <img
@@ -85,7 +89,9 @@
               me at the gym to make sure I keep fit and healthy.
             </p>
             <div class="about__content-info">
-              <a class="button" href="#download">Download CV</a>
+              <a class="button" href="./downloads/resume.pdf" target="_blank"
+                >Download CV</a
+              >
               <div class="social-media">
                 <a
                   class="social-media__link"
